force-app/main/default/objects/FX_Order_Summary__c/FX_Order_Summary__c.object-meta.xml
<CustomObject>
    <label>FX Order Summary</label>
    <nameField>
        <displayFormat>FXS-{YYMMDD}-{000}</displayFormat>
        <label>FX Order Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FX Order Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>