force-app/main/default/objects/FX_Order_Summary__c/fields/Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell__c</fullName>
    <label>Buy/Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>