force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_CurrencyPair__c.field-meta.xml
<CustomField>
    <fullName>FXS_CurrencyPair__c</fullName>
    <label>Currency Pair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AED/THB</fullName>
            </value>
            <value>
                <fullName>AUD/JPY</fullName>
            </value>
            <value>
                <fullName>AUD/THB</fullName>
            </value>
            <value>
                <fullName>AUD/USD</fullName>
            </value>
            <value>
                <fullName>CAD/THB</fullName>
            </value>
            <value>
                <fullName>CHF/THB</fullName>
            </value>
            <value>
                <fullName>CNH/THB</fullName>
            </value>
            <value>
                <fullName>CNY/THB</fullName>
            </value>
            <value>
                <fullName>DKK/THB</fullName>
            </value>
            <value>
                <fullName>EUR/AUD</fullName>
            </value>
            <value>
                <fullName>EUR/CHF</fullName>
            </value>
            <value>
                <fullName>Eur/GBP</fullName>
            </value>
            <value>
                <fullName>EUR/JPY</fullName>
            </value>
            <value>
                <fullName>EUR/THB</fullName>
            </value>
            <value>
                <fullName>EUR/USD</fullName>
            </value>
            <value>
                <fullName>GBP/JPY</fullName>
            </value>
            <value>
                <fullName>GBP/THB</fullName>
            </value>
            <value>
                <fullName>GBP/USD</fullName>
            </value>
            <value>
                <fullName>HKD/THB</fullName>
            </value>
            <value>
                <fullName>IDR/THB</fullName>
            </value>
            <value>
                <fullName>JPY/THB</fullName>
            </value>
            <value>
                <fullName>JPY/USD</fullName>
            </value>
            <value>
                <fullName>LAK/THB</fullName>
            </value>
            <value>
                <fullName>MYR/THB</fullName>
            </value>
            <value>
                <fullName>NOK/THB</fullName>
            </value>
            <value>
                <fullName>NZD/THB</fullName>
            </value>
            <value>
                <fullName>NZD/USD</fullName>
            </value>
            <value>
                <fullName>RUB/THB</fullName>
            </value>
            <value>
                <fullName>SEK/THB</fullName>
            </value>
            <value>
                <fullName>SGD/THB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>