force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_CustomerRate__c.field-meta.xml
<CustomField>
    <fullName>FXS_CustomerRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>