force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_NoOfCompletedOrders__c.field-meta.xml
<CustomField>
    <fullName>FXS_NoOfCompletedOrders__c</fullName>
    <label>No. of Completed Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>