force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>FXS_Order_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FXS Order Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>