force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_Order_Key_Before__c.field-meta.xml
<CustomField>
    <fullName>FXS_Order_Key_Before__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FXS Order Key Before</label>
    <length>50</length>
    <type>Text</type>
</CustomField>