force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_RemainingAllocateAmount__c.field-meta.xml
<CustomField>
    <fullName>FXS_RemainingAllocateAmount__c</fullName>
    <formula>FXS_TotalRequestAmount__c -  FXS_TotalAllocateAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Allocate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>