force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_Total_Allocate_Amount_Million_Unit__c.field-meta.xml
<CustomField>
    <fullName>FXS_Total_Allocate_Amount_Million_Unit__c</fullName>
    <formula>FXS_TotalAllocateAmount__c / 1000000</formula>
    <label>Total Allocate Amount (Million Unit)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>