force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_TotalAllocateAmount__c.field-meta.xml
<CustomField>
    <fullName>FXS_TotalAllocateAmount__c</fullName>
    <label>Total Allocate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>