force-app/main/default/objects/FX_Order_Summary__c/fields/FXS_TotalRequestAmount__c.field-meta.xml
<CustomField>
    <fullName>FXS_TotalRequestAmount__c</fullName>
    <label>Total Request Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>