force-app/main/default/objects/FX_Order_Summary__c/fields/SortingCurrency__c.field-meta.xml
<CustomField>
    <fullName>SortingCurrency__c</fullName>
    <formula>IF(ISPICKVAL(FXS_CurrencyPair__c, &quot;USD/THB&quot;), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sorting Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>