force-app/main/default/objects/FX_Order_Summary__c/fields/Total_Request_Amount_Million_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_Request_Amount_Million_Unit__c</fullName>
    <formula>FXS_TotalRequestAmount__c / 1000000</formula>
    <label>Total Request Amount (Million Unit)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>