force-app/main/default/objects/FX_Order_Summary__c/recordTypes/FX_Order_Summary.recordType-meta.xml
<RecordType>
    <fullName>FX_Order_Summary</fullName>
    <active>true</active>
    <label>FX Order Summary</label>
</RecordType>