force-app/main/default/objects/FX_Order_Summary__c/recordTypes/FX_Order_Summary_InProgress.recordType-meta.xml
<RecordType>
    <fullName>FX_Order_Summary_InProgress</fullName>
    <active>true</active>
    <description>Record Lock</description>
    <label>FX Order Summary (In Progress)</label>
</RecordType>