force-app/main/default/objects/FX_Order_Summary__c/listViews/My_complete_Order.listView-meta.xml
<ListView>
    <fullName>My_complete_Order</fullName>
    <columns>NAME</columns>
    <columns>Buy_Sell__c</columns>
    <columns>FXS_CurrencyPair__c</columns>
    <columns>Total_Request_Amount_Million_Unit__c</columns>
    <columns>FXS_Total_Allocate_Amount_Million_Unit__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FXS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FXS_Status__c</field>
        <operation>contains</operation>
        <value>Fully Completed</value>
    </filters>
    <label>Completed Order Summaries</label>
</ListView>